--- a/components/layout/globalMessage/globalMessage.module.scss
+++ b/components/layout/globalMessage/globalMessage.module.scss
@@ -35,8 +35,9 @@
   .close {
     position: absolute;
     padding: inherit;
-    right: 0;
+    right: -1rem;
     a {
+      padding: 1rem;
       &:before {
         content: "\00d7";
         speak: none;
@@ -45,10 +46,9 @@
         font-variant: normal;
         text-transform: none;
         font-size: 1.8rem;
-        line-height: 1rem;
+        line-height: 1;
         opacity: 0.7;
       }
-      padding: 1rem;
     }
   }
 }
@@ -57,7 +57,7 @@
   color: $color-white;
   width: 90%;
   text-align: left;
-  
+
   @include desktop() {
     text-align: center;
   }
