add textWithForm module

--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -19,6 +19,7 @@
         max-width: 200px;
         margin-right: 3.5rem;
         img {
+          width: unset !important;
           height: unset !important;
           position: unset !important;
         }
