--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -67,6 +67,9 @@
     }
     .link {
       margin-top: unset;
+      padding: 0.5em 2em;
+      border-radius: 3em;
+      border-width: 0.15em;
     }
   }
   .media {
