--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -9,6 +9,7 @@
       flex-basis: 100%;
     }
     .form {
+      margin-top: 1rem;
       input,
       select {
         background-color: $color-lightgray;
@@ -21,8 +22,10 @@
   }
   @include desktop() {
     .content {
+      padding-top: 3rem;
       flex-direction: row;
       .form {
+        margin-top: unset;
         padding: 0 2.5rem;
       }
     }
