--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -143,6 +143,9 @@ $color-mediumpurple: #6e0bdc;
 .text-white {
   color: $color-white;
 }
+.text-black {
+  color: $color-black;
+}
 .text-navy {
   color: $color-navy;
 }
