--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -10,7 +10,7 @@
     }
     .form {
       margin-top: 1rem;
-      form {
+      & > * {
         max-width: 420px;
         margin: 0 auto;
         input,
