--- a/components/agility-pageModules/blogPageContent/blogPageContent.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogPageContent.module.scss
@@ -43,6 +43,10 @@
       }
       & > fieldset {
         margin-top: 1rem;
+        max-height: 400px;
+        overflow-y: scroll;
+        border: 0.1rem solid $color-lightgray;
+        padding: 1rem;
         label {
           display: flex;
           align-items: center;
