--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -3,6 +3,18 @@
 @import "../../../styles/settings/mixins";
 
 .firstFold {
+  .noImageLayout {
+    padding: 2.5rem 0;
+    .heading {
+      margin-bottom: unset;
+    }
+    .textContent {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+  }
   .heading {
     margin-bottom: 2rem;
     max-width: 600px;
@@ -109,6 +121,12 @@
     color: $color-white;
     .text {
       font-size: 1.25rem;
+    }
+    .primaryLink,
+    .secondaryLink {
+      background-color: $color-white;
+      color: $color-navy;
+      border: unset;
     }
   }
   @include desktop() {
