--- a/components/agility-pageModules/logosList/logosList.module.scss
+++ b/components/agility-pageModules/logosList/logosList.module.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/settings/mixins";
 @import "../../../styles/settings/colors";
 
-.clientLogosList {
+.logosList {
   padding: 2rem 0;
   .heading {
     display: flex;
