--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -73,6 +73,11 @@
     }
   }
   .media {
+    & > div {
+      &:only-child {
+        width: 100%;
+      }
+    }
     @include touch() {
       margin: unset;
     }
