--- a/components/agility-pageModules/logosList/logosList.module.scss
+++ b/components/agility-pageModules/logosList/logosList.module.scss
@@ -24,13 +24,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    & > div {
+      &:only-child {
+        height: 100%;
+        img {
+          height: unset;
+          width: unset;
+          object-fit: contain;
+        }
+      }
+    }
   }
   .link {
     border: unset;
     text-align: center;
-    margin-top: 1rem;
+    margin: 1rem 1rem 0 1rem;
     @include desktop() {
-      margin-top: unset;
+      margin: unset;
       white-space: nowrap;
     }
   }
