--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -227,7 +227,6 @@
     position: absolute;
     padding: 0;
 
-
     @include desktop() {
       top: -2147483647px;
       padding: 1rem 2rem 1rem 2rem;
@@ -252,24 +251,28 @@
   }
 
   // Triangle
-  &:hover {
-    @include desktop() {
-      &::before {
-        position: absolute;
-        width: 1rem;
-        height: 1rem;
-        background: $color-mediumgray;
-        content: "";
-        transform: rotate(45deg);
-        top: 3.5rem;
+  &:not(.disabled) {
+    &:hover {
+      @include desktop() {
+        &::before {
+          position: absolute;
+          width: 1rem;
+          height: 1rem;
+          background: $color-mediumgray;
+          content: "";
+          transform: rotate(45deg);
+          top: 3.5rem;
+        }
       }
     }
   }
 
   // Dropdown trigger on hover
-  &:hover > ul {
-    @include desktop() {
-      top: 4rem;
+  &:not(.disabled) {
+    &:hover > ul {
+      @include desktop() {
+        top: 4rem;
+      }
     }
   }
 }
@@ -312,6 +315,88 @@
       &:first-child {
         @include desktop() {
           margin-top: 0;
+        }
+      }
+    }
+  }
+}
+
+.searchContainer {
+  padding-bottom: 1rem;
+  @include desktop() {
+    padding: unset;
+  }
+
+  .search {
+    position: relative;
+    padding-top: 1rem;
+    @include desktop() {
+      padding-top: unset;
+    }
+
+    .searchInput {
+      width: 0;
+      position: absolute;
+      right: 0;
+      transition: all 0.5s;
+      font-size: 1.1rem;
+      padding: 0.5rem;
+      width: 100%;
+
+      @include desktop() {
+        opacity: 0.1;
+        top: -2147483647px;
+        height: 100%;
+        right: 2rem;
+        padding: 1rem;
+        // Only active on desktop
+        &.active {
+          opacity: 1;
+          top: unset;
+          width: 90%;
+          width: 20rem;
+        }
+      }
+    }
+
+    .closeInput {
+      position: absolute;
+      left: 0;
+      height: 100%;
+      width: 1rem;
+    }
+
+    .searchButton {
+      all: unset;
+      position: relative;
+      cursor: pointer;
+
+      @include desktop() {
+        right: -1rem;
+        padding: 1rem 1rem 1rem 1rem;
+      }
+
+      .magnifyingGlass {
+        @include touch() {
+          display: none;
+        }
+        position: relative;
+        display: inline-block;
+        background: #fff;
+        border-radius: 10rem;
+        height: 1rem;
+        width: 1rem;
+        border: 0.2rem solid $color-darkgray;
+
+        &:after {
+          content: "";
+          height: 0.2rem;
+          width: 0.75rem;
+          background: $color-darkgray;
+          position: absolute;
+          top: 0.75rem;
+          left: 0.5rem;
+          transform: rotate(45deg);
         }
       }
     }
