--- a/components/agility-pageModules/logosList/logosList.module.scss
+++ b/components/agility-pageModules/logosList/logosList.module.scss
@@ -24,6 +24,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100px;
     & > div {
       &:only-child {
         height: 100%;
