--- a/styles/components/_genericCard.scss
+++ b/styles/components/_genericCard.scss
@@ -59,6 +59,22 @@
       display: block;
       font-weight: 600;
       font-size: 1rem;
+      span {
+        position: relative;
+        display: flex;
+        align-items: center;
+        &::after {
+          content: "";
+          display: block;
+          padding: 0.15rem;
+          border-right: solid;
+          border-top: solid;
+          margin-left: 0.2rem;
+          border-width: 0.15rem;
+          border-color: $color-navy;
+          transform: rotate(45deg);
+        }
+      }
     }
   }
 }
