--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -185,6 +185,24 @@ blog posts or anywhere where html is rendered */
       font-weight: 600;
     }
   }
+  & > * {
+    img {
+      max-width: 50vw;
+      height: unset;
+      @include touch() {
+        max-width: 70vw;
+        display: block;
+        float: unset;
+        width: 100%;
+        height: unset;
+        margin: 0 auto;
+      }
+      @include mobile() {
+        margin: unset;
+        max-width: unset;
+      }
+    }
+  }
 }
 
 // generic styling for the heading custom field. Override if necessary
