minor chagnes, remove responsive next image from media component for now

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -24,6 +24,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    .mediaContainer {
+        width: 100%;
+    }
   }
   .textItem {
     padding: 2rem 2rem 0 2rem;
