--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -277,6 +277,6 @@ table {
   font-weight: 700 !important;
 }
 
-.text-decoration-unset  {
-  text-decoration: unset;
+.text-decoration-unset {
+  text-decoration: unset !important;
 }
