--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -3,13 +3,29 @@
 
 .clientTestimonial {
   padding: 5rem 0;
-
+  position: relative;
+  overflow: hidden;
+  .backgroundImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    img {
+      object-fit: fill;
+      object-position: 50%;
+      height: unset;
+      width: unset;
+    }
+  }
   .content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    position: relative;
+    z-index: 1;
     .slim {
       display: flex;
       justify-content: center;
@@ -131,6 +147,18 @@
   .logo {
     margin: 2rem auto 0 auto;
     max-width: 180px;
+    & > div {
+      &:only-child {
+        * {
+          padding-top: unset !important;
+        }
+        img {
+          position: unset !important;
+          height: unset !important;
+          width: unset !important;
+        }
+      }
+    }
   }
   .link {
     border: unset;
