--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -8,6 +8,36 @@
     & > * {
       flex-basis: 100%;
     }
+    .textContent {
+      padding: 0 1rem;
+      .testimonial {
+        .testimonialRating {
+          display: flex;
+          margin: 1.5rem 0 1rem 0;
+          img {
+            margin: 0 0.25rem;
+          }
+        }
+        p {
+          font-size: 1rem;
+          white-space: pre-line;
+        }
+        small {
+          font-size: 0.85rem;
+        }
+      }
+      .awardImages {
+        margin-top: 1.5rem;
+        .awardImage {
+          padding: unset;
+          margin: 0 0.25rem;
+          max-width: 90px;
+          img {
+            margin: unset;
+          }
+        }
+      }
+    }
     .form {
       margin-top: 1rem;
       & > * {
