--- a/styles/marketo.scss
+++ b/styles/marketo.scss
@@ -75,12 +75,18 @@
     cursor: pointer;
   }
 
-  input,
-  select {
-    font-size: 1rem;
-    &::placeholder {
-      color: $color-navy;
+  margin-top: 1rem;
+  & > * {
+    max-width: 420px;
+    margin: 0 auto;
+    input,
+    select {
       font-size: 1rem;
+      background-color: $color-lightgray;
+      padding: 0.75rem 1rem;
+      margin: 0.25rem 0;
+      box-sizing: border-box;
+      border: unset;
     }
   }
 }
